# controllers/product.controller.js
@@ -1,12 +1,12 @@
 const db = require("../models");
-const Product = db.Product;
+const { Product, ProductCategory } = db;
 const Op = db.Sequelize.Op;
-
 exports.create = (req, res) => {
   const product = {
     product_name: req.body.product_name,
     price: req.body.price,
     user_id: req.body.user_id,
+    product_category_id: req.body.product_category_id,
   };
 
   Product.create(product)
@@ -21,7 +21,13 @@ exports.create = (req, res) => {
 };
 
 exports.findAll = (req, res) => {
-  Product.findAll({})
+  Product.findAll({
+    include: [
+      {
+        model: ProductCategory,
+      },
+    ],
+  })
     .then((data) => {
       res.send(data);
     })
